注释掉了几个类，仅保证能通过构建和进入游戏